bk_ida/gccida/g1/find_reloads_subreg_address
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_subreg_address/src/reload.c:6218:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_subreg_address/src/reload.c:6254:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)tem + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_subreg_address/src/reload.c:6264:11: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( x != recog_data_0.operand[opnum] ) 
          ^~~~~~~~~~~~
          recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_subreg_address/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_subreg_address/src/obj/reload.o] Error 1
